# simplicial-stuff

./: README.md  draw_2d_abc.py  main.py  pyproject.toml  simplicial_complex.py
